[package]
name = "lfcl"
version = "0.0.2"
authors = ["Liam Dawson"]
description = "Small cli utility for controlling a USB Luxafor flag"
license = "Apache-2.0/MIT"
homepage = "https://github.com/liamdawson/lfcl/"
repository = "https://github.com/liamdawson/lfcl.git"

[dependencies]
lfclib = { path = "lfclib", version = "0.1.1" }
clap = { version = "~2.26", default-features = false }

[workspace]
