[package]
name = "lfclib"
version = "0.1.0"
authors = ["Liam Dawson <liam@liamdawson.me>"]
description = "Small library for controlling a USB Luxafor flag"
license = "Apache-2.0/MIT"
homepage = "https://github.com/liamdawson/lfcl/lfclib"
repository = "https://github.com/liamdawson/lfcl.git"

[dependencies]
libusb = "~0.3"
hidapi = "~0.4"
